finished working on the API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://192.168.64.2:3306/kotlinweb
+spring.datasource.username=daniel
+spring.datasource.password=love345
 
+spring.jpa.hibernate.ddl-auto=none
